[package]
name = "remarkable-cloud"
description = "CLI client for the reMarkable cloud."
license = "Apache-2.0 OR MIT"
version = "0.1.0"
authors = ["Ayla Ounce <ayla@ounce.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33" }
directories = { version = "3.0" }
reqwest = { version = "0.10", features = ["json"] }
remarkable-cloud-api = { version = "0.1", path = '../remarkable-cloud-api' }
# remarkable-data-formats = { version = "0.1", path = '../remarkable-data-formats' }
tokio = { version = "0.2", features = ["full"] }
zip = { version = "0.5" }
